# ChangeLog for app-admin/gentoo-rsync-mirror
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/gentoo-rsync-mirror/ChangeLog,v 1.39 2013/12/31 21:41:17 tomwij Exp $

  31 Dec 2013; Tom Wijsman <TomWij@gentoo.org> metadata.xml:
  Remove erroneous description.

  02 Jun 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due bug #328951

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

  26 Apr 2011; Dane Smith <c1pher@gentoo.org> metadata.xml:
  Updated metadata to reflect new maintainers. Thanks Robert Kowalski
  for offering to help.

  02 Jun 2010; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove tantive from metadata.xml (#200343)

  14 Jan 2010; Jeroen Roovers <jer@gentoo.org>
  gentoo-rsync-mirror-1.0-r4.ebuild:
  Stable for HPPA too.

  11 Oct 2009; Mark Loeser <halcy0n@gentoo.org>
  gentoo-rsync-mirror-1.0-r4.ebuild, gentoo-rsync-mirror-1.0-r5.ebuild:
  QA fixes; unquoted variables

  13 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add herd

  24 Jan 2007; Marius Mauch <genone@gentoo.org>
  gentoo-rsync-mirror-1.0-r4.ebuild, gentoo-rsync-mirror-1.0-r5.ebuild:
  Replacing einfo with elog

  04 Jan 2007; Steve Dibb <beandog@gentoo.org>
  gentoo-rsync-mirror-1.0-r4.ebuild, gentoo-rsync-mirror-1.0-r5.ebuild:
  ebuild cleanup, bug 157666

  27 Aug 2006; Michael Imhof <tantive@gentoo.org>
  gentoo-rsync-mirror-1.0-r5.ebuild:
  Config information updated. Closes #130896.

  29 Dec 2005; Michael Imhof <tantive@gentoo.org>
  files/rsync-gentoo-portage.sh:
  Removed a dos-style carriage return added by a patch. Closes #116096.

  25 Nov 2005; Tom Gall <tgall@gentoo.org>
  gentoo-rsync-mirror-1.0-r4.ebuild:
  stable on ppc64

*gentoo-rsync-mirror-1.0-r5 (28 Jul 2005)

  28 Jul 2005; Michael Imhof <tantive@gentoo.org>
  files/rsync-gentoo-portage.sh, metadata.xml,
  +gentoo-rsync-mirror-1.0-r5.ebuild: