@@ -6,18 +6,24 @@ AUX rsync-gentoo-portage.sh 332 SHA256 cbae155745aa8c857985729c2a0d35ed515eb039a
 AUX rsyncd.conf 735 SHA256 5546947286d1e790955dd362bf0c40faddab4ee44e779cab7a0809cf88fef0ed SHA512 d831c19465d43fe108ebe86a47d2944b032e43a9d92f2c81c58b23e6b94081a7197cdeac8df29e1b637b4e5300211ea058019238d4514619ec1156d2d8ee292c WHIRLPOOL 95de56ad490c43a0d3dfd7c6721861dc101ebd9c71f5f9fcea262aed92dcf4252ac3e1be767102ffeb32a0c186342900bbb450a3241986eb5ebe73ee4fdc7908
 AUX rsyncd.motd 44 SHA256 38c8ed04808ce0f5c0deba00be8f14412de3b76e34ff5c0f5bf01d217f0dbc76 SHA512 812c0e738274222e65e5bc57379ebc6150c232cd8bf98e72b500763828bfcfa45fb8e89c7cccd5e34685f4e5d4787d9cd2ab03ace64bc76f5c5416deb03c17f3 WHIRLPOOL fff28789a60ca80a6008d9eba32a47416826962b61e04132b244417d3113136092723c25e02260c93e12ad322f299528acfaa390fbafe41e6db14cf2a81b84fb
 AUX rsynclogparse-extended.pl 3476 SHA256 9b496670cc75f9fdd99c29fd3ff88627a4d145f2cdfdb3457b9524d66a702418 SHA512 60656deb0e501c51c4a37d2f9cce2829faea830ae42d1f33db52f37b337b71a125b7d350e893fb6098b405e1439cbde160d9e7ecda3ebd8a8f8c34b84acf80b3 WHIRLPOOL 4d3f06b557cf6d3f0bfa4f76e1a00f427dff336319b405b702edf94aace60c4a31a43dd1b217af3dde7fba84b11742a8449beb417ec9b067ae925bbd9bafef25
-EBUILD gentoo-rsync-mirror-1.0-r4.ebuild 2094 SHA256 2a5c34886afc9dd50d946233f6c3dfba844e2062db7702ed3aaf97828a170a47 SHA512 0e9c08be8086c87dd2698a6908e6e573424ac1d68062a6bae4a15e4c7e053723c37009345ac27dc61d5fc8fef67d71611c4cf6f36747be2571bbe7bfaed964e3 WHIRLPOOL 4aba717e78678b2191611be026acc28e334e6d153b0b9ce114346c4f1462d23d0ec8578f5d425012ec698b2a931c1b3a1ac4e659f4713ccd883148aa17e52936
-EBUILD gentoo-rsync-mirror-1.0-r5.ebuild 2104 SHA256 903993ec0dcf939c7430584a0186505440c11242c80094ede10345a0f3ebf2d5 SHA512 463738ed1b7125cde672603a53a193166ca72ffdc85d43d03535d3abc6112e5fa41488ab1c80bf060a14522f3fa764e9576ee4d31d26087e8673c82393e717e9 WHIRLPOOL abc63b62cdec46b2e41545a8b3b2585c82847e3e051bddb641953aecd1d8e10c7b9ff3b6ff0438587a9cc6c4df6895fdc5491975b77577797ea7bb89ffc1fb94
-MISC ChangeLog 4855 SHA256 c23fc77205af0eeee86b747b0afea864b66be5eb5d575928818f9baac5ad3996 SHA512 6b6c2dab4099c56a94d130709a412508c6bcee183eb0822786b4b130d79338d73d053e690fc66f5dd5bd755ef43d7edd1c43d1193f9a768b3c815568d7663f96 WHIRLPOOL 656145ba45581d7d370e151e8ee9da619a427c41c79a665b5f3e3dfac33693782a48f5f6e417c4fd1e51832de5e08d5996b387a07425dfd0428c21f51b609524
+EBUILD gentoo-rsync-mirror-1.0-r4.ebuild 2133 SHA256 c43b7a4f73fe80397512282c0aa781d35b96b0f9f4561e5fe139e77a21fff2b9 SHA512 c3c5bcff44d34ad6103ecf51c32aa91f5d9cb67efcc0db22bbf0c7aa50e2ad8fdbbe32c39e97d11eec3dcdadf56f7f26c8f54f6d4c6806ba0e7a27e173950a31 WHIRLPOOL 8d9c8b47f33c8817143bdf0009a6e771c89c626d37d4aa8302f7446cd01888252d87a2498ee734c713b9f2e812a3e2138d6e8d9c7673bf66c948a3b96de0019d
+EBUILD gentoo-rsync-mirror-1.0-r5.ebuild 2139 SHA256 d8e2c19bb7981ac584885bb64a17430071c8ad80deefbc2cd31ef1ce772e6e16 SHA512 b41a0f25294fadf4ed2fe6b00891ed9b5946a3b0b8736ee3943c70686c5cdfe9aee92ed8452cb4b1a36f9831dc74a4a62d993cebe3de772fb16c22711edbfc0b WHIRLPOOL 980b6edf39add1a27ebd988307e5452b271124b2c059147b32a2febe5e9c8f611c015b00fdc7c6f991f8b9af18d36472e9f5e27c3891e3736faed85fc7e6e4ee
+MISC ChangeLog 5025 SHA256 ff8929d98588a6a40ffdc106699e904974110c14bffb4d15871ada8ab32c9250 SHA512 c5567bd9b7f618980ae3e05874ebae82292018492f7f473ba55b22e48dd986d5a1e38e7877a6b3003af82d029409c52520c0d86855d28eb1a463c3b91cc31820 WHIRLPOOL 4dfa1acf3edb15baba471d1a8d5f5bbf3db7d7fc90087c0469f38d42ed7193531c7ee5bdd5a6a08727d5f55d866cc0757807c746a1e9d8e93d4fd29289a3326d
 MISC metadata.xml 261 SHA256 28dd38d81a98b6dbeae46eec8f8b9276a223f241df41258220e526659e8c7520 SHA512 ae88ce947f2f12418c2130e67bfe74060716c33b4322e9a39637aead08ebbb1e3d09ee8424b5319587ecd4bf380a4b547b6d403cbf26062dd1eb71c9a3ab75b8 WHIRLPOOL 6e0a61c616bc6608fa18d2ad6134c6eb939ed49ff98fc41dd3886271f1d2d638afcdb8b4e60accee2a00dc9acf9959b620532efdc7788fa7de1edb6e118c3152
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJSwznpAAoJEJWyH81tNOV9SvkIALwl6n/0IhySsGS9pkSHIJn4
-QZmtrs1THK74mQM0op1mWQtcPC/cX7JA34Ma1dsINVuFXn9qu7EW+Y7tcwmvLl+G
-rwfRh391FtAEyyzU24AqrUvMPTgxV5mpKEkKXZG/S/3jfU0mIowXJjM3JymxYrbq
-XVQRoKpjJ+PVaE6WRhU1ruQgK08sl5oN/mJ0KU0ppl/6IPH5ZaECkdMr/wtgXzup
-zGPFbHssQYspS/ZG03hMPK0mVA4PdvpKy9YEz/13kigAYypP/HxtVxXn6GuTJy9w
-+Ckybd4aDMBYfQkyL+sasaZXyHbw5cTe4FDmfejpEEwMXwFTIHcdm6om0CRuVzg=
-=oVu+
+iQIcBAEBCAAGBQJUqfg1AAoJEJIMDbyqvv1VJL8P/22GoeBG+BFEn/55GZEfi+lq
+QB+Qr6hxF7/Ao1TqJVWm33X1SD5YuBlBP9d2eCusfxK8OAHIZoByAaKyJeFC3of1
+B2KwPjn2h92GkEyhaNdBQlYyLcnrIk8+XJbNKj7TBzd+0jb50GqEiLKRWNp8YlBw
+Hm3Mf4XWuEdbBdAlK0Kv95dhDS5ZauXgYrAEW467LDsWjF3Tup6WFkPzeOYMgejM
+EXPG27Xto/SH4eKjPmVqOubsz2ZvazHZDCoTKn2ubqWcJBVQjoGOzE8aU7tUb4mN
+ftReC68drCnPyBKaH+LBO3QDn6gnv8qAIInB85bqvYg7R2p15N14rOd+k3N48DSD
+5HYzTPehEXyfdJ/IjlZw9+xyYB0t5VuYETMlZpg4CxIOil/zlGi+22hrWsGXrrY6
+/diyCj7SGDOp069zzaGemJ9Xo54V0fFjA8Py/A71iVKJBjygudYRq6qlqibp85e3
+YLSnybFDTYfrc11IawsdbI5iuW1dpwNI+xHWoqpYriGHj8KIgalglfeCzdNOJN08
+EEKXowpPoeBGKpa6ULBgrHyZWXCNMp8O7MKbN8qB6vbYpswJ1SdzBD9chrvv/3ys
+f+dSPGQvuTEu+uvAn+a/reFHUi1f8XrX9KyWE2HRvueYVcCmDXHnC/irY1mxKUCb
+DjGaJOTXP2BX89JJHXU0
+=rCpl
 -----END PGP SIGNATURE-----
