@@ -1,7 +1,7 @@
 DEFINED_PHASES=install postinst
 DESCRIPTION=Ebuild for setting up a Gentoo rsync mirror
-HOMEPAGE=http://www.gentoo.org/doc/en/rsync.xml
+HOMEPAGE=https://wiki.gentoo.org/wiki/Project:Infrastructure/Rsync
 KEYWORDS=~amd64 ~alpha ~ppc ~sparc ~x86 ~hppa ~ppc64
 LICENSE=GPL-2
 SLOT=0
-_md5_=90b5f14d1d957ce0bc977dd819dbe193
+_md5_=f25dae2d0ae799a1813bad359ecfb59c
