@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/gentoo-rsync-mirror
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/gentoo-rsync-mirror/ChangeLog,v 1.39 2013/12/31 21:41:17 tomwij Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-admin/gentoo-rsync-mirror/ChangeLog,v 1.40 2015/01/05 02:34:22 dlan Exp $
+
+  05 Jan 2015; Yixun Lan <dlan@gentoo.org> gentoo-rsync-mirror-1.0-r4.ebuild,
+  gentoo-rsync-mirror-1.0-r5.ebuild:
+  update HOMEPAGE url, bug 534456, proxy for maintainer
 
   31 Dec 2013; Tom Wijsman <TomWij@gentoo.org> metadata.xml:
   Remove erroneous description.
